--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "from-zero",
+  "name": "nano-kit",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/from-zero.js",
+  "main": "dist/nano-kit.js",
   "files": [
-    "dist/from-zero.js"
+    "dist/nano-kit"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
