--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -11,16 +11,17 @@
     "prepack": "npm run build",
     "build": "rollup -c",
     "lint": "eslint src",
-    "lint-fix": "eslint src --fix",
+    "lint-fix": "eslint src --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "eslint": "^9.37.0",
-    "rollup": "^4.52.4",
+    "eslint": "^9.38.0",
+    "rollup": "^4.52.5",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-filesize": "^10.0.0"
+    "rollup-plugin-filesize": "^10.0.0",
+    "vitest": "^3.2.4"
   }
 }
